--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 Chapter01-GettingStartedwithViewAnimations/BahamaAir/BahamaAir.xcodeproj/project.xcworkspace/xcuserdata/dudawei.xcuserdatad/UserInterfaceState.xcuserstate
+
+Chapter01-GettingStartedwithViewAnimations/BahamaAir/BahamaAir.xcodeproj/xcuserdata/dudawei.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
